Spacing fixes on mobile

--- a/custom_bootstrap/homepage.less
+++ b/custom_bootstrap/homepage.less
@@ -243,6 +243,11 @@
   position: relative;
   top: -7px;
 }
+@media screen and (max-width: @screen-sm) {
+  .contact-text {
+    font-size: 80%;
+  }
+}
 .recaptcha-error {
   font-family: surveyorBook,serif;
   font-size: 12px;
